tests/lang/obr/types/pass/alias.obr
MODULE Alias;
    TYPE X = INTEGER;
END Alias.
