tests/lang/obr/types/fail/array-length-wrong-sign.obr
MODULE Arrays;
    TYPE X = ARRAY -5 OF INTEGER;
END Arrays.
